--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qoute Generator</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <title>Quote Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/4edf28a6b4.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-
+    <div class="quote-container" id="qoute-container">
+        <!-- Qoute -->
+        <div class="quote-text">
+            <i class="fa-solid fa-quote-left"></i>
+            <span id="qoute">What you are is what you have been, What you'll be is what you do now.</span>
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Buddha</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+            <button class="twitter-button" id="twitter" title="Tweet this!!">
+                <i class="fab fa-x-twitter"></i>
+            </button>
+            <button id="new-quote">New Qoute</button>
+        </div>
+    </div>
 
     <!-- script -->
     <script src="script.js"></script>
