--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-    <div class="quote-container" id="qoute-container">
+    <div class="quote-container" id="quote-container">
         <!-- Qoute -->
         <div class="quote-text">
             <i class="fa-solid fa-quote-left"></i>
-            <span id="qoute">What you are is what you have been, What you'll be is what you do now.</span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-container">
@@ -30,6 +30,7 @@
             <button id="new-quote">New Qoute</button>
         </div>
     </div>
+    <div class="loader" id="loader"></div>
 
     <!-- script -->
     <script src="script.js"></script>
